Fix not visible interests icons in chrome browser

--- a/src/pages/interests/interests.scss
+++ b/src/pages/interests/interests.scss
@@ -103,6 +103,8 @@
         overflow: hidden;
 
         .hoverContainer {
+          width: 100%;
+          height: 100%;
           position: relative;
 
           display: flex;
